<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="textStart"
                android:text="@string/list_of_books"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                android:textStyle="bold"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/layout_first_book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                    <ImageView
                            android:contentDescription="@string/malik"
                            android:layout_width="180dp"
                            android:layout_height="150dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/shorot"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:text="@string/shorot"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/malik"
                                android:textSize="25sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/algeria"
                                android:textSize="15sp"
                                android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/grey"/>

                <LinearLayout
                        android:id="@+id/layout_second_book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:contentDescription="@string/nafar"
                            android:layout_width="180dp"
                            android:layout_height="150dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/nafar"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:text="@string/nafar"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/aymen"
                                android:textSize="25sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/jordan"
                                android:textSize="15sp"
                                android:textStyle="bold"/>


                    </LinearLayout>
                </LinearLayout>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/grey"/>

                <LinearLayout
                        android:id="@+id/layout_third_book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:contentDescription="@string/ahmed"
                            android:layout_width="180dp"
                            android:layout_height="150dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/christmas"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:text="@string/christmas"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/ahmed"
                                android:textSize="25sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/iraq"
                                android:textSize="15sp"
                                android:textStyle="bold"/>


                    </LinearLayout>
                </LinearLayout>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/grey"/>

                <LinearLayout
                        android:id="@+id/layout_fourth_book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:contentDescription="@string/sayed"
                            android:layout_width="180dp"
                            android:layout_height="150dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/althelal"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:text="@string/dhilal"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/sayed"
                                android:textSize="25sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart"
                                android:layout_marginTop="6dp"
                                android:text="@string/egypt"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>